--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,3 +1,54 @@
-<h1>{{ storeName }}</h1>
-<img [src]="productList[0].Img" alt="" srcset="" />
-<h3>{{ "We offer an explicit discount of " + discount }}</h3>
+<h1>{{ storeName|uppercase }}</h1>
+
+<div *ngIf="noTable; then thenBlock else elseBlock"></div>
+<ng-template #thenBlock>
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
+            data-bs-toggle="dropdown" aria-expanded="false">
+            Dropdown button
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li>
+                <a class="dropdown-item" href="#" *ngFor="let cat of categoryList">{{cat.Name}}</a>
+            </li>
+        </ul>
+    </div>
+
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Price</th>
+                <th scope="col">Img</th>
+
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let prod of productList;index as i;">
+                <th scope="row">{{prod.ID}}</th>
+                <td>{{prod.Name}}</td>
+                <td>{{prod.Quantity}}</td>
+                <td>{{prod.Price|currency}}</td>
+                <td><img [src]="productList[i].Img" height="150" /></td>
+            </tr>
+
+        </tbody>
+    </table>
+
+    <div class="row  align-items-center">
+        <div class="col-auto">
+            <label for="nameInp" class="col-form-label">Name</label>
+            <input type="text" id="nameInp" class="form-control mb-3" (keyup)="tttt($event)">
+        </div>
+        <div class="col-auto">
+            <button type="button" class="btn btn-primary " (click)="hideTable()">Buy</button>
+        </div>
+    </div>
+    <h3 *ngIf="!noDiscount"> We offer an explicit discount of {{ discount|percent }}</h3>
+</ng-template>
+<ng-template #elseBlock>
+    <h2>Thanks for purshasing from Our Store {{custName}}</h2>
+</ng-template>
+<!-- <img [src]="productList[0].Img" height="200" /> -->
