--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,20 @@
 <app-navbar></app-navbar>
 <app-header></app-header>
 
-<app-product></app-product>
+<div class="container px-4 px-lg-5">
+    <div class="row gx-4 gx-lg-5 justify-content-center">
+        <div class="col-md-7 col-lg-8 col-xl-10">
+            <!-- Post preview-->
+
+
+            <router-outlet></router-outlet>
+
+            <!-- Divider-->
+            <hr class="my-4" />
+
+        </div>
+    </div>
+</div>
+
 
 <app-footer></app-footer>
