--- a/src/app/post-comments/post-comments.component.html
+++ b/src/app/post-comments/post-comments.component.html
@@ -1,4 +1,5 @@
 <h3>comments on Post {{pstId}}</h3>
+<h4>{{errMsg}}</h4>
 <br>
 <div class="row row-cols-1 row-cols-md-1 g-4">
     <div class="col" *ngFor="let cmnt of comments">
