--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -9,7 +9,7 @@
         </button>
         <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
             <li>
-                <a class="dropdown-item" href="#" *ngFor="let cat of categoryList">{{cat.Name}}</a>
+                <a class="dropdown-item" *ngFor="let cat of categoryList">{{cat.Name}}</a>
             </li>
         </ul>
 
