--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,4 @@
+<h4>{{errMsg}}</h4>
 <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col" *ngFor="let usr of UsrList">
         <div class="card h-100">
